diesel_compile_tests/tests/fail/derive/bad_belongs_to.stderr
error: unexpected end of input, expected parentheses
       help: the correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`
  --> tests/fail/derive/bad_belongs_to.rs:29:20
   |
LL | #[diesel(belongs_to)]
   |                    ^

error: expected parentheses
  --> tests/fail/derive/bad_belongs_to.rs:37:21
   |
LL | #[diesel(belongs_to = "Bar")]
   |                     ^

error: unexpected end of input, expected identifier
  --> tests/fail/derive/bad_belongs_to.rs:45:21
   |
LL | #[diesel(belongs_to())]
   |                     ^

error: expected `,`
  --> tests/fail/derive/bad_belongs_to.rs:53:33
   |
LL | #[diesel(belongs_to(foreign_key = bar_id))]
   |                                 ^

error: expected `,`
  --> tests/fail/derive/bad_belongs_to.rs:61:25
   |
LL | #[diesel(belongs_to(Bar = "bar_id"))]
   |                         ^

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`
  --> tests/fail/derive/bad_belongs_to.rs:69:37
   |
LL | #[diesel(belongs_to(Bar, foreign_key))]
   |                                     ^

error: expected `=`
  --> tests/fail/derive/bad_belongs_to.rs:77:37
   |
LL | #[diesel(belongs_to(Bar, foreign_key(bar_id)))]
   |                                     ^

error: unknown attribute, expected `foreign_key`
  --> tests/fail/derive/bad_belongs_to.rs:85:26
   |
LL | #[diesel(belongs_to(Bar, what))]
   |                          ^^^^
